--- a/build.gradle
+++ b/build.gradle
@@ -1,22 +1,23 @@
 plugins {
     id 'java'
+    id 'org.springframework.boot' version '3.2.0'
 }
 
 group 'com.dk0124.project'
 version '0.0-SNAPSHOT'
 
-
 sourceCompatibility = '17.0.9'
 targetCompatibility = '17.0.9'
 
+apply plugin: 'io.spring.dependency-management'
 
 repositories {
     mavenCentral()
 }
 
 dependencies {
-    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.7.0'
-    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.7.0'
+    // spring dependency
+    implementation('org.springframework.boot:spring-boot-starter-web')
 }
 
 test {
