--- a/build.gradle
+++ b/build.gradle
@@ -22,6 +22,11 @@ dependencies {
     // lombok
     compileOnly 'org.projectlombok:lombok:1.18.30'
     annotationProcessor 'org.projectlombok:lombok'
+
+    //test
+    testCompileOnly 'org.projectlombok:lombok'
+    testImplementation 'org.springframework.boot:spring-boot-starter-test'
+    testImplementation 'com.navercorp.fixturemonkey:fixture-monkey-starter:1.0.0'
 }
 
 test {
