Feat : add discord error alarm on Logback
- logback-discord-appender 의존성 추가
- discord alarm 추가 후 확인
- 메모 파일 생성 후 gitignore 에 추가

--- a/.gitignore
+++ b/.gitignore
@@ -191,3 +191,6 @@ gradle-app.setting
 *.hprof
 
 # End of https://www.toptal.com/developers/gitignore/api/macos,intellij+all,java,gradle,git
+
+
+memo_ignore
