--- a/build.gradle
+++ b/build.gradle
@@ -13,6 +13,7 @@ apply plugin: 'io.spring.dependency-management'
 
 repositories {
     mavenCentral()
+    maven { url 'https://jitpack.io' }
 }
 
 dependencies {
@@ -30,6 +31,9 @@ dependencies {
     testCompileOnly 'org.projectlombok:lombok'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testImplementation 'com.navercorp.fixturemonkey:fixture-monkey-starter:1.0.0'
+
+    // Logback Appender Discord
+    implementation 'com.github.napstr:logback-discord-appender:1.0.0'
 }
 
 test {
