--- a/src/main/resources/logback-variables.properties
+++ b/src/main/resources/logback-variables.properties
@@ -1,3 +1,6 @@
 LOG_DIR=logs
 LOGGING_PATTERN=[%-5level] %d{yyyy-MM-dd HH:mm:ss} [%thread] [%logger{0}:%line] - %msg%n
 
+
+<!-- 경로 설정 필요-->
+DISCORD_ERROR_LOG_URI=...
