feat : add db dependecy and configuration
- db 관련 의존성 추가 / spring data jpa, h2, mysql
- db 테스트 관련 의존성 추가 ( test - lombok )
- h2 연동 테스트

--- a/.gitignore
+++ b/.gitignore
@@ -186,6 +186,8 @@ gradle-app.setting
 # JDT-specific (Eclipse Java Development Tools)
 .classpath
 
+
+
 ### Gradle Patch ###
 # Java heap dump
 *.hprof
@@ -194,3 +196,4 @@ gradle-app.setting
 
 
 memo_ignore
+.jqwik-database
